# Geometric-Multigrid-preconditioners-for-long-range-Coulomb-interaction

./: .cproject  .project  1stEdit19.8.16.cc  2ndTaskwithRHS.cc  CMakeLists.txt  LICENSE  Makefile  README.md  atom_1000.data  gaussian-charges.prm  gaussian_charges.prm  gnuplot_script.ps  jobscript  main.cc  prmtest.prm  run.sh  script.sh  step-16.prm  step-50.cc  step-50.h  test_script.sh
Cluster runs output and postprocessing/: 64k_atoms_Dealii-Project.o875040  64k_atoms_Dealii-Project.o875535  64k_atoms_without_opti.o875055  Dealii-Project.o874556  Dealii-Project.o875534  SSOR_64k_atoms.o876224  SSOR_run.o876223  out_parse_CG_iter.py  out_parse_RHS_assemble_walltime.py  out_parse_Total_walltime.py  out_parse_ncell_per_atom.py  out_parse_ndofs.py  out_parser.py  without_opti.o875054
Plotting/: Error_plot.gp  RHS_atomsVswalltime.gp  atomsVswalltime.gp  ncells_per_atom.gp
_build/: atom_2.data  gaussian-charges.prm  step-16.prm  two_charges_at_origin_simulation_result_paraview.csv
atom/: atom_n10_8000.data  atom_n20_64000.data  atom_n3_216.data  atom_n7_2744.data
include/: step_50.h
src/: CMakeLists.txt  main.cc  step-50.cc  step_50.h
tests/: 216_atom_test.mpirun=1.output  216_atom_test.mpirun=3.output  216_atom_test.mpirun=7.output  216_atom_test.prm  8_atom_test.prm  CMakeLists.txt  Test_Input_Data  atom_2.data  atom_3.data  atom_8.data  atom_n1_2.data  cell_data_transfer_test.cc  cell_data_transfer_test.mpirun=1.output  cell_data_transfer_test.mpirun=2.output  cell_data_transfer_test.mpirun=3.output  cell_data_transfer_test.prm  cluster_run_test.cc  (+21 more)
(+28 files in other folders)
